REGRESSION (r234105): [iOS] WKColorButton leaks a UIColor <https://webkit.org/b/210658> <rdar://problem/61938137>

Reviewed by Darin Adler.

Source/WebCore:

* html/ColorInputType.cpp:
(WebCore::ColorInputType::isKeyboardFocusable const):
* page/Chrome.cpp:
(WebCore::Chrome::createColorChooser):
- Drive-by fix of unreachable code on PLATFORM(IOS_FAMILY).

Source/WebKit:

* UIProcess/ios/forms/WKFormColorPicker.mm:
(-[WKColorButton dealloc]): Add.
- Release _color instance variable to fix leak.


Canonical link: https://commits.webkit.org/223555@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260290 268f45cc-cd09-0410-ab3c-d52691b4dbfc